# unopposed

./: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml  scrape.yml
election_data/: alabama_2020.json  alabama_2021.json  alabama_2022.json  alabama_2023.json  alabama_2024.json  alabama_2025.json  alabama_2026.json  alaska_2020.json  alaska_2021.json  alaska_2022.json  alaska_2023.json  alaska_2024.json  alaska_2025.json  alaska_2026.json  arizona_2020.json  arizona_2021.json  arizona_2022.json  arizona_2023.json  arizona_2024.json  arizona_2025.json  arizona_2026.json  arkansas_2020.json  arkansas_2021.json  arkansas_2022.json  arkansas_2023.json  arkansas_2024.json  arkansas_2025.json  arkansas_2026.json  california_2020.json  california_2021.json  california_2022.json  california_2023.json  california_2024.json  california_2025.json  california_2026.json  colorado_2020.json  colorado_2021.json  colorado_2022.json  colorado_2023.json  colorado_2024.json  (+325 more)
scraper/: README.md  data.py  main.py  nationwide_stats.py  output.py  pyproject.toml
scraper/sources/: ballotpedia.py
scraper/tests/: test_ballotpedia.py  test_data.py  test_error_fallback.py  test_json_integrity.py  test_ma.py  test_race_totals.py
scripts/: lint.sh  run_scrape_locally.sh  run_scraper_locally.sh  run_tests.sh  run_ui.sh
src/: App.svelte
src/lib/: summary.test.ts  types.ts
